--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "emotion": "^9.1.3",
-    "final-form": "^4.2.0",
+    "final-form": "^4.12.0",
     "glamor": "^2.20.40",
     "govuk-colours": "^1.0.3",
-    "govuk-react": "0.2.1",
+    "lev-react-components": "UKHomeOffice/lev-react-components",
     "normalize.css": "^8.0.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-emotion": "^9.1.3",
-    "react-final-form": "^3.1.0",
-    "react-scripts": "1.1.3"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-final-form": "^3.7.0",
+    "react-markdown": "^4.0.8",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "1.1.3",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
